<resources>
    <string name="app_name">Delta Plan 2100</string>

    <string name="text_prime_minister">"The Bangladesh Delta Plan (BDP) 2100 is the plan moving Bangladesh forward for the next 100 years. We have formulated BDP 2100 in the way we want to build Bangladesh."</string>
    <string name="prime_minister">-Hon’ble Prime Minister H.E. Sheikh Hasina</string><!--<string name="bd_name">People's Republic of Bangladesh</string>-->
    <string name="map_access_token">pk.eyJ1IjoiYXRtc2tyb255IiwiYSI6ImNrM3lhejZsNTFpbTgza3B3em9scWZ1dXoifQ.OQsZyP0Abh0bhbVhCu_UCA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="close_header_title">Delta Plan 2100</string>
    <string name="close_notification">Are you want to close this apps?</string>
    <string name="nav_header_title">Delta Plan 2100</string>
    <string name="nav_header_desc">Delta Plan 2100</string>
    <string name="nav_header_subtitle">CEGIS | WUR</string>
    <string name="action_settings">Settings</string>
    <string name="action_symbol_layer_info">Layer Map</string>
    <string name="activity_draw_geojson_line">Draw GeoJSON Line</string>
    <string name="action_about">About Us</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send Feedback</string>
    <string name="tap_on_marker_instruction">Marker Instruction</string>
    <string name="capital">Capital</string>

    <!-- menu block start-->
    <string name="mnu_home">Home</string>
    <string name="mnuDP2100">Delta Plan 2100</string>
    <string name="mnuWaterResources">Water Resources</string>
    <string name="mnuAgriculture">Agriculture</string>
    <string name="mnuEnvironmentDisaster">Env. &amp; Disaster</string>
    <string name="mnuSocioEconomic">Socio Economic</string>
    <string name="mnuSpatialPlanningLanduse">Spatial Planning</string>
    <string name="mnuClimate">Climate</string>

    <string name="db_mnuDP2100">1</string>
    <string name="db_mnuWaterResources">2</string>
    <string name="db_mnuAgriculture">3</string>
    <string name="db_mnuEnvironmentDisaster">4</string>
    <string name="db_mnuSocioEconomic">5</string>
    <string name="db_mnuSpatialPlanningLanduse">6</string>
    <string name="db_mnuClimate">7</string>

    <string-array name="agriculture_info">
        <item>Flood Zone</item>
        <item>Salinity Area</item>
        <item>Erosion and Accretion</item>
        <item>Arsenic Contamination</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="macroeconomic_indicators">Indicators Delta Plan Policy Option</string>
    <string name="title_activity_about">About</string>

    <!-- TODO: Map current location permission -->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>
