<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <!-- First Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/btnDelta"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:tooltipText="@string/mnuDP2100">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/delta" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/titillium_regular"
                        android:padding="10dp"
                        android:text="@string/mnuDP2100"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnWater"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:tooltipText="@string/mnuWaterResources">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/waterresources" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/titillium_regular"
                        android:padding="10dp"
                        android:text="@string/mnuWaterResources"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- First Row-->

            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/btnAgriculture"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/agriculture" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/titillium_regular"
                        android:padding="10dp"
                        android:text="@string/mnuAgriculture"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnEnvDis"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/drought" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/titillium_regular"
                        android:lineSpacingMultiplier="0.8"
                        android:padding="0dp"
                        android:text="@string/mnuEnvironmentDisaster"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>
            <!-- End Second Row-->

            <!-- Third Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/btnSocial"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/social" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/titillium_regular"
                        android:padding="10dp"
                        android:text="@string/mnuSocioEconomic"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnLanduse"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/landuse" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/titillium_regular"
                        android:lineSpacingMultiplier="0.8"
                        android:padding="0dp"
                        android:text="@string/mnuSpatialPlanningLanduse"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- End Third Row-->

            <!-- Fourth Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/btnClimate"
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/layout_bg_gray"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/climate" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/titillium_regular"
                        android:padding="10dp"
                        android:text="@string/mnuClimate"
                        android:textAlignment="center"
                        android:textColor="@color/DeepGray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- End Fourth Row-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>